force-app/main/default/objects/Pesquisa_Resposta__c/Pesquisa_Resposta__c.object-meta.xml
<CustomObject>
    <label>Resposta da pesquisa de satisfação</label>
    <nameField>
        <label>Nome de Pesquisa Resposta</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Respostas da pesquisa de satisfação</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>