force-app/main/default/objects/Pesquisa_Resposta__c/fields/Conte_do_da_quest_o__c.field-meta.xml
<CustomField>
    <fullName>Conte_do_da_quest_o__c</fullName>
    <formula>Pesquisa_Questao__r.Conteudo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Conteúdo da questão</label>
    <type>Text</type>
</CustomField>