force-app/main/default/objects/Pesquisa_Resposta__c/fields/NPS__c.field-meta.xml
<CustomField>
    <fullName>NPS__c</fullName>
    <formula>IF(ISBLANK(Resposta_valor__c), &apos;&apos; ,IF(Resposta_valor__c &lt; 7, &apos;Detrator&apos;, IF(Resposta_valor__c &gt;= 9, &apos;Promotor&apos;,  &apos;Neutro&apos;)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NPS</label>
    <type>Text</type>
</CustomField>