force-app/main/default/objects/Pesquisa_Resposta__c/listViews/Todas.listView-meta.xml
<ListView>
    <fullName>Todas</fullName>
    <columns>NAME</columns>
    <columns>Resposta__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todas</label>
</ListView>